[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
taskchampion = "0.7.0"
cxx = "1.0.124"
# Not used directly, but adds the native-roots feature. #3625.
reqwest = { version = ">= 0.11.27", default-features = false, features = ["rustls-tls-native-roots"] }

[build-dependencies]
cxx-build = "1.0"
