libtaskui_SHORTNAME  = ui
noinst_LIBRARIES     = libtaskui.a
libtaskui_a_SOURCES  = UI.cpp Layout.cpp Element.cpp Clock.cpp Keys.cpp        \
                       Message.cpp Report.cpp Stats.cpp Title.cpp resize.cpp   \
                       ReportStats.cpp log.cpp                                 \
                       Clock.h Element.h Keys.h Layout.h Message.h Report.h    \
                       ReportStats.h Stats.h Title.h UI.h log.h
libtaskui_a_CPPFLAGS = -I../util -I..
