[package]
name = "integration-tests"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
taskchampion = { path = "../taskchampion", features = ["server-sync"] }
taskchampion-lib = { path = "../lib" }
taskchampion-sync-server = { path = "../sync-server" }

[dev-dependencies]
anyhow.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true

[build-dependencies]
cc.workspace = true
