[package]
name = "integration-tests"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
taskchampion = { path = "../taskchampion" }
taskchampion-lib = { path = "../lib" }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
lazy_static.workspace = true

[build-dependencies]
cc.workspace = true
