[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
libc.workspace = true
anyhow.workspace = true
ffizz-header.workspace = true

taskchampion = { path = "../taskchampion" }

[dev-dependencies]
pretty_assertions.workspace = true
